# cg-fourier

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  data2D.cpp  fourier1D.cpp  fourier2D.cpp  viewer.cpp  viewer.h
